Remove Guava as a dependency